# Shorts-Generator

./: .gitignore  MODAL_DEPLOYMENT.md  README.md  env.template  modal_app.py  output.json  pyproject.toml  test.py
src/: api.py  config.py  mail_sender.py  model.py  task.py
src/shorts_generator/: audio_trancriber.py  prompt.py  shorts_agent.py  utils.py  video_processor.py
